* [nt]roff: The ".als" request has been added to create an alias name
  for a request, macro, or string.
* [nt]roff: The ".aln" request has been added to create an alias name
  for a number register.
* [nt]roff: The ".rnn" request has been added to rename a number register.
* [nt]roff: The ".box" request has been added; it is like ".di" but saves
  and restores a previous partially filled line.
* [nt]roff: The ".rj" request (right-align next input lines) has been
  added. The ".rj" number register that holds the number of remaining
  lines to be right-adjusted has been added.
* [nt]roff: The ".ce" number register that holds the number of remaining
  lines to be centered with the ".ce" request has been added.
* troff: The "\Yx", "\Y(xx", or "\Y[xxx]" escape sequence has been added
  to output the contents of the string or macro x, xx, or xxx, respectively,
  as a device control function.
* [nt]roff: The "\$0" escape sequence has been added to refer to the name
  of the current macro or string.
* [nt]roff: The "(c;e)" numerical expression function has been added to
  evaluate "e" using "c" as default scale indicator.
* [nt]roff: The "M" (Em/100), "s" (= "u"), and "z" (= "p") scale indicators
  have been added.
* [nt]roff: The "\n[.ev]" number register has been added as a method to
  determine the name of the current environment.
* troff: The "\n[rst]" and "\n[rsb]" registers are set by the width function
  to the highest and lowest extent of the bounding box of any character.
  This currently only works for Type 1 and TrueType fonts.
* troff: The "\n[.cht]" and "\n[.cdp]" registers are set to the highest
  and lowest extent of the bounding box of the previous character. This
  currently only works for Type 1 and TrueType fonts.
* [nt]roff: In extension level 1, long string "\*[xxx]", register "\n[xxx]",
  and font "\f[xxx]" names are no longer recognized unless they are on a
  line beginning with the ".do" request.